@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2004-10-27 allenb   Added support for multi-threaded profile data collection.
+                    Profile data is now collected and managed per thread.
 2004-10-27 allenb   Refactored BaseThread handling and usage.
                     This cleans up some crufty corners of this code that
                     still has the flavor of polymorphic threads.
